--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,4 +40,6 @@ dependencies {
 
     //slider
     implementation 'com.github.smarteist:autoimageslider:1.4.0'
+    // Material Design
+    implementation 'com.google.android.material:material:1.3.0-alpha03'
 }
