--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,6 +9,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.BookApp">
+        <activity
+            android:name=".Activity.SavedActivity"
+            android:exported="true" />
         <activity android:name=".Dashboard.UserDashboard" />
         <activity android:name=".OnBoarding.OnBoardingScreen" />
         <activity android:name=".Authentication.SignUpActivity" />
